fix info tag won't shrink on small view

--- a/cargo/app/style.css
+++ b/cargo/app/style.css
@@ -81,12 +81,16 @@ body {padding-bottom: 56px;box-sizing: border-box;}
         }
 
 .information {
-    width: 100%;
+    width: auto;
     height: 56px;
     padding: 12px 16px;
 
     flex-grow: 1;
     flex-shrink: 1;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
     .title {
@@ -97,7 +101,7 @@ body {padding-bottom: 56px;box-sizing: border-box;}
 
         font-size: 16px;
         line-height: 1;
-
+        text-align: left;
         color: rgba(255, 255, 255, .84);
     }
 
@@ -109,6 +113,7 @@ body {padding-bottom: 56px;box-sizing: border-box;}
 
         font-size: 14px;
         line-height: 1;
+        text-align: left;
 
         color: rgba(255, 255, 255, .56);
     }
